--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,30 @@ nav a:hover {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+.container-grid {
+  display: grid;
+  background-color: white;
+  padding: 20px;
+  gap: 20px;
+  margin: 20px auto;
+  width: 80%;
+  border-radius: 8px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+.column {
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.nav-container {
+  margin: 20px auto;
+  width: 40%;
+  max-width: 800px;
+  background-color: #ffffff;
+  color: black;
+  padding: 20px;
+  border-radius: 8px;
+}
 .profile-container {
   display: flex;
   flex-wrap: wrap; /* wrapping for smaller screens */
@@ -57,6 +81,18 @@ nav a:hover {
   width: 100%;
   height: auto;
   border-radius: 50%; /* making the image circular */
+}
+.link-button {
+  height: 40px;
+  width: 80px;
+  max-height: 100px;
+  max-width: 200px;
+  border-radius: 12px;
+  background-color: #2e5781;
+  color: white;
+}
+.link-button:hover {
+  background-color: #004399;
 }
 footer {
   text-align: center;
