--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,20 @@ nav a:hover {
   gap: 20px;
   align-items: center;
 }
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.fadeIn {
+  opacity: 0; /* start invisible */
+  animation: fadeIn 1s ease-in forwards; 
+}
 .profile-pic img {
   max-width: 250px;
   width: 100%;
