--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,20 @@ footer {
   color: white;
   position: fixed;
   bottom: 0;
+  padding: 10px;
   width: 100%;
+}
+footer a {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: bold;
+  margin: 0 10px;
+  padding: 8px 16px;
+  background-color: #777;
+  border-radius: 4px;
+}
+footer a:hover {
+  background-color: #555;
 }
   
 
