--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,17 @@
-/* styles.css */
+/* functions */
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* common items */
 
 body {
   margin: 0;
@@ -6,6 +19,28 @@ body {
   background-color: #4D5042; 
   color: #000000; 
   font-family: Arial, sans-serif;
+}
+footer {
+  text-align: center;
+  padding: 10px;
+  background: #2e5781;
+  color: white;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  margin-top: 30px;
+}
+footer a {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: bold;
+  margin-top: 100px;
+  padding: 8px 16px;
+  background-color: #777;
+  border-radius: 4px;
+}
+footer a:hover {
+  background-color: #555;
 }
 header {
   background: #2e5781;
@@ -36,6 +71,41 @@ nav a:hover {
   background: #004399;
   border-radius: 4px;
 }
+
+/* class items */
+
+.align-bottom {
+  margin-top: auto;
+}
+.align-center {
+  align-self: center;
+}
+.container-bio {
+  margin: 20px auto;
+  width: 80%;
+  max-width: 1200px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.column {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.column h3 {
+  margin-top: 0;
+  color: #0073e6;
+}
+.column p {
+  line-height: 1.6;
+}
 .container {
   margin: 20px auto;
   width: 80%;
@@ -56,45 +126,18 @@ nav a:hover {
   border-radius: 8px;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
-.column {
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-.nav-container {
-  margin: 20px auto;
-  width: 40%;
-  max-width: 800px;
-  background-color: #ffffff;
-  color: black;
-  padding: 20px;
-  border-radius: 8px;
-}
-.profile-container {
-  display: flex;
-  flex-wrap: wrap; /* wrapping for smaller screens */
-  gap: 20px;
-  align-items: center;
-}
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-    transform: translateY(10px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
 .fadeIn {
   opacity: 0; /* start invisible */
   animation: fadeIn 1s ease-in forwards; 
 }
-.profile-pic img {
-  max-width: 250px;
-  width: 100%;
-  height: auto;
-  border-radius: 50%; /* making the image circular */
+.four-columns {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+  margin: 20px auto;
+  width: 80%;
+  max-width: 1200px;
+  align-items: stretch;
 }
 .link-button {
   height: 40px;
@@ -108,28 +151,39 @@ nav a:hover {
 .link-button:hover {
   background-color: #004399;
 }
-footer {
-  text-align: center;
-  padding: 10px;
-  background: #2e5781;
+.link-button-wide {
+  height: 40px;
+  width: 120px;
+  max-height: 100px;
+  max-width: 200;
+  border-radius: 12px;
+  background-color: #2e5781;
   color: white;
-  position: fixed;
-  bottom: 0;
-  padding: 10px;
+}
+.link-button-wide:hover {
+  background-color: #004399;
+}
+.nav-container {
+  margin: 20px auto;
+  width: 40%;
+  max-width: 800px;
+  background-color: #ffffff;
+  color: black;
+  padding: 20px;
+  border-radius: 8px;
+}
+.page-content {
+  padding-bottom: 30px;
+}
+.profile-container {
+  display: flex;
+  flex-wrap: wrap; /* wrapping for smaller screens */
+  gap: 20px;
+  align-items: center;
+}
+.profile-pic img {
+  max-width: 250px;
   width: 100%;
+  height: auto;
+  border-radius: 50%; /* making the image circular */
 }
-footer a {
-  color: #ffffff;
-  text-decoration: none;
-  font-weight: bold;
-  margin: 0 10px;
-  padding: 8px 16px;
-  background-color: #777;
-  border-radius: 4px;
-}
-footer a:hover {
-  background-color: #555;
-}
-  
-
-  
